// Vitest Snapshot v1

exports[`generateRouteManifest function > basic-routes 1`] = `
{
  "/": {
    "componentName": "index",
    "file": "index.tsx",
    "id": "/",
    "index": true,
    "layout": false,
    "parentId": "layout",
    "path": undefined,
  },
  "About": {
    "componentName": "about-index",
    "file": "About/index.tsx",
    "id": "About",
    "index": true,
    "layout": false,
    "parentId": "layout",
    "path": "About",
  },
  "About/me": {
    "componentName": "about-me-index",
    "file": "About/me/index.tsx",
    "id": "About/me",
    "index": true,
    "layout": false,
    "parentId": "layout",
    "path": "About/me",
  },
  "home": {
    "componentName": "home",
    "file": "home.tsx",
    "id": "home",
    "index": undefined,
    "layout": false,
    "parentId": "layout",
    "path": "home",
  },
  "layout": {
    "componentName": "layout",
    "file": "layout.tsx",
    "id": "layout",
    "index": undefined,
    "layout": true,
    "parentId": undefined,
    "path": undefined,
  },
}
`;

exports[`generateRouteManifest function > define-extra-routes 1`] = `
{
  "/": {
    "componentName": "index",
    "file": "index.tsx",
    "id": "/",
    "index": true,
    "layout": false,
    "parentId": "layout",
    "path": undefined,
  },
  "/about-me": {
    "componentName": "about-index",
    "file": "About/index.tsx",
    "id": "/about-me",
    "index": undefined,
    "layout": false,
    "parentId": undefined,
    "path": "/about-me",
  },
  "About/me": {
    "componentName": "about-me-index",
    "file": "About/me/index.tsx",
    "id": "About/me",
    "index": true,
    "layout": false,
    "parentId": "layout",
    "path": "About/me",
  },
  "home": {
    "componentName": "home",
    "file": "home.tsx",
    "id": "home",
    "index": undefined,
    "layout": false,
    "parentId": "layout",
    "path": "home",
  },
  "layout": {
    "componentName": "layout",
    "file": "layout.tsx",
    "id": "layout",
    "index": undefined,
    "layout": true,
    "parentId": undefined,
    "path": undefined,
  },
}
`;

exports[`generateRouteManifest function > doc-delimeters-routes 1`] = `
{
  "home/news": {
    "componentName": "home.news",
    "file": "home.news.tsx",
    "id": "home/news",
    "index": undefined,
    "layout": false,
    "parentId": "layout",
    "path": "home/news",
  },
  "layout": {
    "componentName": "layout",
    "file": "layout.tsx",
    "id": "layout",
    "index": undefined,
    "layout": true,
    "parentId": undefined,
    "path": undefined,
  },
}
`;

exports[`generateRouteManifest function > dynamic-routes 1`] = `
{
  "/": {
    "componentName": "index",
    "file": "index.tsx",
    "id": "/",
    "index": true,
    "layout": false,
    "parentId": undefined,
    "path": undefined,
  },
  "about": {
    "componentName": "about",
    "file": "about.tsx",
    "id": "about",
    "index": undefined,
    "layout": false,
    "parentId": undefined,
    "path": "about",
  },
  "blog": {
    "componentName": "blog-index",
    "file": "blog/index.tsx",
    "id": "blog",
    "index": true,
    "layout": false,
    "parentId": undefined,
    "path": "blog",
  },
  "blog/:id": {
    "componentName": "blog-$id",
    "file": "blog/$id.tsx",
    "id": "blog/:id",
    "index": undefined,
    "layout": false,
    "parentId": undefined,
    "path": "blog/:id",
  },
}
`;

exports[`generateRouteManifest function > escape-routes 1`] = `
{
  "1.pdf": {
    "componentName": "1[.pdf]",
    "file": "1[.pdf].tsx",
    "id": "1.pdf",
    "index": undefined,
    "layout": false,
    "parentId": undefined,
    "path": "1.pdf",
  },
  "index": {
    "componentName": "[index]",
    "file": "[index].tsx",
    "id": "index",
    "index": undefined,
    "layout": false,
    "parentId": undefined,
    "path": "index",
  },
}
`;

exports[`generateRouteManifest function > ignore-routes 1`] = `
{
  "/": {
    "componentName": "index",
    "file": "index.tsx",
    "id": "/",
    "index": true,
    "layout": false,
    "parentId": "layout",
    "path": undefined,
  },
  "About/me": {
    "componentName": "about-me-index",
    "file": "About/me/index.tsx",
    "id": "About/me",
    "index": true,
    "layout": false,
    "parentId": "layout",
    "path": "About/me",
  },
  "home": {
    "componentName": "home",
    "file": "home.tsx",
    "id": "home",
    "index": undefined,
    "layout": false,
    "parentId": "layout",
    "path": "home",
  },
  "layout": {
    "componentName": "layout",
    "file": "layout.tsx",
    "id": "layout",
    "index": undefined,
    "layout": true,
    "parentId": undefined,
    "path": undefined,
  },
}
`;

exports[`generateRouteManifest function > layout-routes 1`] = `
{
  "/": {
    "componentName": "index",
    "file": "index.tsx",
    "id": "/",
    "index": true,
    "layout": false,
    "parentId": "layout",
    "path": undefined,
  },
  "about": {
    "componentName": "about",
    "file": "about.tsx",
    "id": "about",
    "index": undefined,
    "layout": false,
    "parentId": "layout",
    "path": "about",
  },
  "blog/": {
    "componentName": "blog-index",
    "file": "blog/index.tsx",
    "id": "blog/",
    "index": true,
    "layout": false,
    "parentId": "blog/layout",
    "path": undefined,
  },
  "blog/:id": {
    "componentName": "blog-$id",
    "file": "blog/$id.tsx",
    "id": "blog/:id",
    "index": undefined,
    "layout": false,
    "parentId": "blog/layout",
    "path": ":id",
  },
  "blog/layout": {
    "componentName": "blog-layout",
    "file": "blog/layout.tsx",
    "id": "blog/layout",
    "index": undefined,
    "layout": true,
    "parentId": "layout",
    "path": "blog",
  },
  "home/": {
    "componentName": "home-index",
    "file": "home/index.tsx",
    "id": "home/",
    "index": true,
    "layout": false,
    "parentId": "home/layout",
    "path": undefined,
  },
  "home/layout": {
    "componentName": "home-layout-index",
    "file": "home/layout/index.tsx",
    "id": "home/layout",
    "index": true,
    "layout": true,
    "parentId": "home/layout",
    "path": "layout",
  },
  "layout": {
    "componentName": "layout",
    "file": "layout.tsx",
    "id": "layout",
    "index": undefined,
    "layout": true,
    "parentId": undefined,
    "path": undefined,
  },
}
`;

exports[`generateRouteManifest function > nested-routes 1`] = `
{
  "a/b/c": {
    "componentName": "a-b-c",
    "file": "a/b/c.tsx",
    "id": "a/b/c",
    "index": undefined,
    "layout": false,
    "parentId": undefined,
    "path": "a/b/c",
  },
  "d/e/f": {
    "componentName": "d.e.f",
    "file": "d.e.f.tsx",
    "id": "d/e/f",
    "index": undefined,
    "layout": false,
    "parentId": undefined,
    "path": "d/e/f",
  },
}
`;

exports[`generateRouteManifest function > splat-routes 1`] = `
{
  "*": {
    "componentName": "$",
    "file": "$.tsx",
    "id": "*",
    "index": undefined,
    "layout": false,
    "parentId": "layout",
    "path": "*",
  },
  "home": {
    "componentName": "home",
    "file": "home.tsx",
    "id": "home",
    "index": undefined,
    "layout": false,
    "parentId": "layout",
    "path": "home",
  },
  "layout": {
    "componentName": "layout",
    "file": "layout.tsx",
    "id": "layout",
    "index": undefined,
    "layout": true,
    "parentId": undefined,
    "path": undefined,
  },
}
`;
